--- a/til/20250924.md
+++ b/til/20250924.md
@@ -2,7 +2,7 @@
 
 ### 서론
 
-소프트웨어 개발 과정에서 **테스트**는 필수적인 부분입니다. 특히, **유닛 테스트**는 개별 코드 단위가 의도한 대로 동작하는지 확인하여 안정적인 애플리케이션을 만드는 데 중요한 역할을 합니다. 하지만 테스트를 하다 보면 외부 시스템이나 복잡한 의존성 때문에 테스트 환경을 구축하기 어려운 경우가 발생합니다. 이럴 때 \*\*테스트 더블(Test Double)\*\*이라는 기술을 활용하여 문제를 해결할 수 있습니다.
+소프트웨어 개발 과정에서 **테스트**는 필수적인 부분입니다. 특히, **유닛 테스트**는 개별 코드 단위가 의도한 대로 동작하는지 확인하여 안정적인 애플리케이션을 만드는 데 중요한 역할을 합니다. 하지만 테스트를 하다 보면 외부 시스템이나 복잡한 의존성 때문에 테스트 환경을 구축하기 어려운 경우가 발생합니다. 이럴 때 **테스트 더블(Test Double)**이라는 기술을 활용하여 문제를 해결할 수 있습니다.
 
 테스트 더블에는 여러 종류가 있으며, 그중에서도 **Mock, Stub, Spy**는 가장 널리 사용되는 개념입니다. 이 세 가지는 모두 실제 객체 대신 가짜 객체를 만들어 테스트를 진행하지만, 각각의 목적과 역할이 명확하게 다릅니다. 이 글에서는 Mock, Stub, Spy의 개념과 차이점을 명확히 정리하고, 언제 어떤 것을 사용해야 하는지 심도 있게 다룹니다.
 
