--- a/til/20250924.md
+++ b/til/20250924.md
@@ -10,7 +10,7 @@
 
 ### 본론: Mock, Stub, Spy 상세 분석
 
-Mock, Stub, Spy는 모두 테스트 대상 객체의 \*\*의존성(dependency)\*\*을 격리하여 테스트의 신뢰성과 효율성을 높이는 도구입니다. 이들은 서로 다른 목적과 사용 시나리오를 가집니다.
+Mock, Stub, Spy는 모두 테스트 대상 객체의 **의존성(dependency)**을 격리하여 테스트의 신뢰성과 효율성을 높이는 도구입니다. 이들은 서로 다른 목적과 사용 시나리오를 가집니다.
 
 #### 1\. Stub (스터브)
 
